docs/v2/index.md
# **Projeto MorfoBlocos Digital**


![MorfoBlocos Logo](img/logo_teste.jpeg)

## Descrição do projeto

O MorfoBlocos é uma ferramenta didática para o ensino de morfologia. Atualmente, a operação é analógica, baseada em blocos físicos. O propósito aqui é a entrega de feedback pedagógico sobre a estrutura das palavras.

O jogo é composto por peças coloridas que representam morfemas — raízes (ou radicais), prefixos, sufixos e desinências — que podem ser combinadas pelos estudantes para formar diferentes vocábulos. Cada peça traz, de um lado, o morfema em si e, do outro, a classificação do elemento e o processo de formação envolvido (flexão, derivação, derivação parassintética, composição, derivação regressiva e reduplicação). Dessa forma, ao montar palavras, o estudante visualiza não apenas o resultado, mas o processo morfológico que o gerou.

## 📚 Documentação

<div class="grid cards" markdown>

-   ### 📖 Visão do Produto

    Conheça o contexto do problema, a proposta de solução e os objetivos do projeto.

    [Acessar](visao-produto/cenario-atual.md)

-   ### 📋 Requisitos

    Consulte os requisitos funcionais e não funcionais definidos para o sistema.

    [Acessar](visao-produto/requisitos.md)

-   ### 📅 Cronograma

    Visualize o planejamento e o acompanhamento das entregas.

    [Acessar](visao-produto/cronograma.md)

-   ### 🚀 Sprints

    Acompanhe as atividades desenvolvidas ao longo das iterações.

    [Acessar](sprints/sprint1.md)

</div>

## Tabela de Integrantes

| Foto | **Integrante** | Função | Github | Matrícula |
|------|---------------|--------|--------|-----------|
| <img src="img/anabeatriz.jpeg" width="80"; object-fit:cover;"> | Ana Beatriz | Engenharia de Requisitos, Desenvolvedor Backend  | [Ana Beatriz](https://github.com/AnnaBeatrizAraujo) | 241025891 |
| <img src="img/arturfernandes.jpeg" width="80"; object-fit:cover;"> | Artur Fernandes | Engenharia de Requisitos, Desenvolvedor Backend | [Artur Fernandes](https://github.com/arturalvesfn) | 232024527 |
| <img src="img/brunosouza.jpeg" width="80"; object-fit:cover;"> | Bruno Souza | Engenharia de Requisitos, Desenvolvedor Backend | [Bruno Souza](https://github.com/youngburny) | 221029196 |
| <img src="img/carloseduardo.jpg" width="80"; object-fit:cover;"> | Carlos Eduardo | Engenharia de Requisitos, Desenvolvedor Frontend  | [Carlos Eduardo](https://github.com/cadumotta) | 241025194 |
| <img src="img/luizhenrique.jpeg" width="80"; object-fit:cover;"> | Luiz Henrique | Engenharia de Requisitos, Desenvolvedor Frontend / Scrum | [Luiz Henrique](https://github.com/Luizz97) | 241012329 |

## Versionamento

| **Data**       | Versão | Descrição                                           | Autor              |
| ---------------| -------| ----------------------------------------------------| -------------------|
| 14/06/2026 | 1.0 | Estruturação inicial para entrega da Unidade III. | [Bruno Souza](https://github.com/youngburny) |
| 15/06/2026 | 1.1 | Ajustes na home e na estilização do GitPages. | [Bruno Souza](https://github.com/youngburny) |
| 15/06/2026 | 1.2 | Atualizações nas seções 6, 8, 9, 10 e 11 da Visão de Produto e adição do painel Figma com o status do projeto. | [Bruno Souza](https://github.com/youngburny) |
| 15/06/2026 | 1.3 | Corrige algumas formatações nas sprints e seções 8, 9 e 10. | [Bruno Souza](https://github.com/youngburny) |
| 15/06/2026 | 1.4 | Adiciona imagens do painel Figma 'Status do Projeto'. | [Bruno Souza](https://github.com/youngburny) |